--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <section class="links slide hidden_bottom">
         <p1><a class="navlink linkhover" href="Projects/Projects.html">Projects</a></p1>
         <p1>&#x2022</p1>
-        <p1><a class="navlink linkhover" href="https://www.youtube.com/watch?v=eCnq2LHNy3E">About Me</a></p1>
+        <p1><a class="navlink linkhover" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">About Me</a></p1>
         <p1>&#x2022</p1>
-        <p1><a class="navlink linkhover" href="https://www.youtube.com/watch?v=eCnq2LHNy3E">Contact</a></p1>
+        <p1><a class="navlink linkhover" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Contact</a></p1>
     </section>
 </body>
 </html>
