--- a/Projects/index.html
+++ b/Projects/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <p1><a class="navlink linkhover homebutton" href="../index.html">DinoZvonar</a></p1>
+    <p1><a class="navlink linkhover homebutton" href="../">DinoZvonar</a></p1>
 
     <h1 class="siteHeader_title slide hidden_top">Projects</h1>
     <h1 class="siteShowcase slide hidden_left">SpaceTrip</h1>
