Space Trip Webbsite Update

--- a/Projects/SpaceTrip/SpaceTip.html
+++ b/Projects/SpaceTrip/SpaceTip.html
@@ -10,6 +10,7 @@
 </head>
 <style>
     #bg{
+        background-position: 10px 10px;
         background-image: url(https://drive.google.com/uc?export=view&id=1zdI7QE80S2FeHXWE1h-L0_cdeI9PUtlJ);
         background-repeat: no-repeat;
         background-size: 100% auto;
@@ -18,11 +19,13 @@
 
 <body id="bg">
 
-    <p1><a class="navlink linkhover homebutton" href="../Projects.html">Projects</a></p1>
+    <p1><a class="navlink linkhover homebutton" href="../">DinoZvonar</a></p1>
 
-    <img class="siteHeader_image slide hidden_top" src="https://drive.google.com/uc?export=view&id=1uTvsetOh7f-Ht9oEcSSwbsjSkjsOW3e1" width="30%" alt="SpaceTrip">
+    <img class="siteHeader_image slide hidden_top" src="https://drive.google.com/uc?export=view&id=1uTvsetOh7f-Ht9oEcSSwbsjSkjsOW3e1" alt="SpaceTrip">
 
-    <h1 class="siteHeader_title slide hidden_top">Space Trip</h1>
+    <h1 class="siteHeader_lable slide hidden_left">Save an astronaut from losing their oxygen while experiencing <br> a psychedelic trip through mind and space.</h1>
+
+    <iframe class="youtube_trailer slide hidden_right" width="560" height="315" src="https://www.youtube-nocookie.com/embed/DmrDakzZUWM?si=zEP0AJpld_hS_JgG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
 
     <h1 class="siteHeader_title slide hidden_top">Space Trip</h1>
 
