Pushed spacetrip images

--- a/Projects/SpaceTrip/SpaceTip.html
+++ b/Projects/SpaceTrip/SpaceTip.html
@@ -11,7 +11,7 @@
 <style>
     #bg{
         background-position: 10px 10px;
-        background-image: url(https://drive.google.com/uc?export=view&id=1zdI7QE80S2FeHXWE1h-L0_cdeI9PUtlJ);
+        background-image: url(../../Images/SpaceTripBanner.png);
         background-repeat: no-repeat;
         background-size: 100% auto;
     }
@@ -19,9 +19,9 @@
 
 <body id="bg">
 
-    <p1><a class="navlink linkhover homebutton" href="../">DinoZvonar</a></p1>
+    <h1><a class="navlink linkhover projectsbutton" href="../">Projects</a></h1>
 
-    <img class="siteHeader_image slide hidden_top" src="https://drive.google.com/uc?export=view&id=1uTvsetOh7f-Ht9oEcSSwbsjSkjsOW3e1" alt="SpaceTrip">
+    <img class="siteHeader_image slide hidden_top" src="../../Images/SpaceTripLogo.png" alt="SpaceTrip">
 
     <h1 class="siteHeader_lable slide hidden_left">Save an astronaut from losing their oxygen while experiencing <br> a psychedelic trip through mind and space.</h1>
 
