--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="app.js"></script>
 </head>
 <body>
-    <section class="links slide hidden_bottom">
+    <section class="links slide hidden_top">
         <p1><a class="navlink linkhover" href="Projects/">Projects</a></p1>
         <p1>"   "</p1>
         <p1><a class="navlink linkhover" href="#">About Me</a></p1>
