--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <p1><a class="navlink linkhover" href="#">Contact</a></p1>
     </section>
     
-    <h1 class="siteHeader_title slide hidden_top">Dino Dominic Zvonar</h1>
-    <h1 class="siteHeader_lable slide hidden_left">Tools/Engine Developer</h1>
+    <h1 class="siteHeader_title slide hidden_top">Dino Zvonar</h1>
+    <h1 class="siteHeader_lable slide hidden_left">Core Systems Software Engineer</h1>
 
 </body>
 
