--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script defer src="app.js"></script>
 </head>
 <body>
-    <section class="links slide hidden_top">
+    <section class="navbar links slide hidden_top">
         <p1><a class="navlink linkhover" href="Projects/">Projects</a></p1>
-        <p1>"   "</p1>
+        <a>&nbsp&nbsp&nbsp&nbsp</a>
         <p1><a class="navlink linkhover" href="#">About Me</a></p1>
-        <p1>"   "</p1>
+        <a>&nbsp&nbsp&nbsp&nbsp</a>
         <p1><a class="navlink linkhover" href="#">Contact</a></p1>
     </section>
     
