Changed toolbar to be at the top of the webbsite

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <script defer src="app.js"></script>
 </head>
 <body>
+    
+<!--<iframe
+  class="bg-video"
+  src="https://www.youtube.com/embed/I_c8a6YS0gc?si=EnwqFYGkwcL10TPm"
+  frameBorder="0"
+  allowfullscreen>-->
+
     <section class="navbar links slide hidden_top">
         <p1><a class="navlink linkhover" href="Projects/">Projects</a></p1>
         <a>&nbsp&nbsp&nbsp&nbsp</a>
