--- a/index.html
+++ b/index.html
@@ -9,23 +9,35 @@
     <script defer src="app.js"></script>
 </head>
 <body>
-    
-<!--<iframe
-  class="bg-video"
-  src="https://www.youtube.com/embed/I_c8a6YS0gc?si=EnwqFYGkwcL10TPm"
-  frameBorder="0"
-  allowfullscreen>-->
+    <video autoplay muted loop class="bg-video" >
+        <source src="Videos/DinoZvonarComBackground.webm" type="video/webm">
+    </video>
+
+    <!--<iframe class="bg-video"
+      src="Videos/DinoZvonarComBackground.webm?&autoplay=1&mute=1"
+      frameBorder="0"
+      allow="autoplay; fullscreen; loop">-->
+
+    <!--<iframe class="bg-video"
+      src="https://www.youtube.com/embed/I_c8a6YS0gc?si=EnwqFYGkwcL10TPm?&autoplay=1&mute=1&controls=0&disablekb&loop=1&end=20&playlist=I_c8a6YS0gc"
+      frameBorder="0"
+      allow="autoplay; fullscreen; loop">-->
 
     <section class="navbar links slide hidden_top">
         <p1><a class="navlink linkhover" href="Projects/">Projects</a></p1>
         <a>&nbsp&nbsp&nbsp&nbsp</a>
-        <p1><a class="navlink linkhover" href="#">About Me</a></p1>
+        <p1><a class="navlink linkhover" href="#">About</a></p1>
         <a>&nbsp&nbsp&nbsp&nbsp</a>
         <p1><a class="navlink linkhover" href="#">Contact</a></p1>
     </section>
     
-    <h1 class="siteHeader_title slide hidden_top">Dino Zvonar</h1>
-    <h1 class="siteHeader_lable slide hidden_left">Core Systems Software Engineer</h1>
+    <div class="landingPageHeader">
+        <h1 class="siteHeader_title slide hidden_top">Dino Zvonar</h1>
+        <h1 class="siteHeader_lable slide hidden_left">Core Systems Software Engineer</h1>
+    </div>
+
+
+
 
 </body>
 
