--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--Why are you inspecting my website?-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,16 +13,6 @@
     <video autoplay muted loop class="bg-video" >
         <source src="Videos/DinoZvonarComBackground.webm" type="video/webm">
     </video>
-
-    <!--<iframe class="bg-video"
-      src="Videos/DinoZvonarComBackground.webm?&autoplay=1&mute=1"
-      frameBorder="0"
-      allow="autoplay; fullscreen; loop">-->
-
-    <!--<iframe class="bg-video"
-      src="https://www.youtube.com/embed/I_c8a6YS0gc?si=EnwqFYGkwcL10TPm?&autoplay=1&mute=1&controls=0&disablekb&loop=1&end=20&playlist=I_c8a6YS0gc"
-      frameBorder="0"
-      allow="autoplay; fullscreen; loop">-->
 
     <section class="navbar links slide hidden_top">
         <p1><a class="navlink linkhover" href="Projects/">Projects</a></p1>
