Updated background video, should display correctly on mobile safari browsers now

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer src="app.js"></script>
 </head>
 <body>
-    <video autoplay muted loop class="bg-video" >
+    <video autoplay muted loop playsInline class="bg-video" >
         <source src="Videos/DinoZvonarComBackground.webm" type="video/webm">
     </video>
 
