--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dino Zvonar</title>
 
-    <link rel="stylesheet"0 href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="landingPage.css">
     <script defer src="app.js"></script>
 </head>
 <body>
