Added some media queries

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </header>
 
         <div class="tabs">
-        <H3 onclick="AboutClick(this)" class="tab">ABOUT ME</H3>
+        <H3 onclick="AboutClick(this)" class="tab">ABOUT</H3>
         <H3 onclick="GamesClick(this)" class="tab disabled">GAMES</H3>
         <H3 onclick="BlogClick(this)" class="tab disabled">BLOG</H3>
         </div>
