Added outline to sticker

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
     </head>
 
-    <div class="stickers hidden">
+    <div class="stickers">
         <img class="sticker dinoSticker" src="Resources/Images/PICT0001.jpg">
     </div>
 
