Updated cursor and added CV

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="contact">
             <p><a href="mailto:dino.zvonar@hotmail.com">dino.zvonar@hotmail.com</a></p>
             <p><a href="https://www.linkedin.com/in/dinozvonar/">Linkedin</a></p>
-            <p><a href="mailto:dino.zvonar@hotmail.com">CV</a></p>
+            <p><a href="Resources/Dino Zvonar Resume.pdf">CV</a></p>
             <p><a href="tel:+46704295636">(+46) 70-429-56-36</a></p>
         </div>
         <p>© 2026 Dino Dominic Zvonar.</p>
