Managed to center the footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
     </head>
 
-    <div class="stickers">
+    <div class="stickers hidden">
         <img class="sticker dinoSticker" src="Resources/Images/PICT0001.jpg">
     </div>
 
@@ -69,7 +69,7 @@
         <H3 onclick="GamesClick(this)" class="tab disabled">GAMES</H3>
         <H3 onclick="BlogClick(this)" class="tab disabled">BLOG</H3>
         </div>
-
+    <div style="height: 100px;"></div>
     <div class="aboutme tabcontent">
         <p>Hi! I'm Dino, a 22 year old Software Engineer / Game Programmer.
            I'm currently working at <a href="https://www.handelsbanken.se/">Handelsbanken</a> 
@@ -94,22 +94,19 @@
         </p>
     </div>
     <div class="games tabcontent hidden">
-        <grid>
-            <p>Battlefield 6</p>
-            <p>Heronin</p>
-            <p>Sprite</p>
-        </grid>
+        <p style="text-align: center;">Under Construction</p>
     </div>
     <div class="blog tabcontent hidden">
-        <p>Under Construction</p>
+        <p style="text-align: center;">Under Construction</p>
     </div>
+    <div style="height: 100px;"></div>
     <div class="footer">
         <H3>CONTACT ME</H3>
         <div class="contact">
-            <p><a href="mailto:dino.zvonar@hotmail.com">dino.zvonar@hotmail.com</a></p>
-            <p><a href="https://www.linkedin.com/in/dinozvonar/">Linkedin</a></p>
-            <p><a href="Resources/Dino Zvonar Resume.pdf">CV</a></p>
-            <p><a href="tel:+46704295636">(+46) 70-429-56-36</a></p>
+            <p class="contactLink"><a href="mailto:dino.zvonar@hotmail.com">dino.zvonar@hotmail.com</a></p>
+            <!-- <p><a href="https://www.linkedin.com/in/dinozvonar/">Linkedin</a></p> --> 
+            <p class="contactLink"><a href="Resources/Dino Zvonar Resume.pdf">CV</a></p>
+            <p class="contactLink"><a href="tel:+46704295636">(+46) 70-429-56-36</a></p>
         </div>
         <p>© 2026 Dino Dominic Zvonar.</p>
         <p>All Rights Reserved</p>
