--- a/index.html
+++ b/index.html
@@ -31,44 +31,22 @@
     <body>
 
         <header style="text-align: center;">
-            <h1>
-                Dino Zvonar
-            </h1>
-            <h3 class="subtitle">
-                <span id="adjective">Software Engineer</span>
-            </h3>
 
-        <script type="text/javascript">
-        (function () {
-            var words = [
-                "Software Engineer",
-                "Game Developer",
-                "Cobol Developer",
-                "Engine Programmer",
-                "Graphics Programmer",
-                "Gameplay Programmer",
-                "C# Developer",
-                "C++ Developer"
-            ],
-            index = 0;
-
-            const elem = document.getElementById("adjective");
-
-            setInterval(() => {
-                index = (index + 1) % words.length;
-                elem.textContent = words[index];
-            }, 1000);
-        })();
-        </script>
-
-
+            <script>
+                fetch('navbar.html')
+                .then(response => response.text())
+                .then(data => {
+                const nav = document.getElementById('navbar');
+                
+                const fragment = document.createRange().createContextualFragment(data);
+                nav.appendChild(fragment);
+                });
+            </script>
+            <div id="navbar"></div>
+            
         </header>
 
-        <div class="tabs">
-        <H3 onclick="AboutClick(this)" class="tab">ABOUT</H3>
-        <H3 onclick="GamesClick(this)" class="tab disabled">GAMES</H3>
-        <H3 onclick="BlogClick(this)" class="tab disabled">BLOG</H3>
-        </div>
+
     <div style="height: 100px;"></div>
     <div class="aboutme tabcontent">
         <p>Hi! I'm Dino, a 22 year old Software Engineer / Game Programmer.
