--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,9 @@
-
-<h1>
+<div class="navbar">
+    <h1>
     Dino Zvonar
-</h1>
+    </h1>
+
+<!--
 <h3 class="subtitle">
     <span id="adjective">Software Engineer</span>
 </h3>
@@ -28,9 +30,28 @@ setInterval(() => {
 }, 1000);
 })();
 </script>
+-->
 
-<div class="tabs">
-<H3 onclick="AboutClick(this)" class="tab">ABOUT</H3>
-<H3 onclick="GamesClick(this)" class="tab disabled">GAMES</H3>
-<H3 onclick="BlogClick(this)" class="tab disabled">BLOG</H3>
+    <script>
+        var tabs = document.getElementsByClassName("tab");
+
+        for (var i = tabs.length - 1; i >= 0; i--)
+        {
+            if (!tabs[i].classList.contains("disabled"))
+            {
+                tabs[i].classList.add("disabled");
+            }
+        };
+
+    </script>
+
+    <div class="tabs">
+    <H3 onclick=HomeClick(this) class="tab" id="HOME">HOME</H3>
+    <H3 onclick=AboutClick(this) class="tab disabled" id="ABOUT">ABOUT</H3>
+    <H3 onclick=GamesClick(this) class="tab disabled" id="GAMES">GAMES</H3>
+    <H3 class="tab disabled" id="PROJECTS">PROJECTS</H3>
+    </div>
+
+    <img class="Hamburger" src="Resources/Images/Hamburger Menu.png">
+
 </div>
