Fixed not being able to use the navbar in the about page and the navbar opening new tabs instead of changing the existing tab

--- a/About/index.html
+++ b/About/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <script type="text/javascript" src="code.js"></script>
+    <script type="text/javascript" src="../code.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
     </head>
 
     <body>
-            <header style="text-align: center;">
+        <header style="text-align: center;">
 
             <script>
                 fetch('../navbar.html')
