Added some more games

--- a/Games/index.html
+++ b/Games/index.html
@@ -51,8 +51,28 @@
         </header>
         
         <div class="main-content">
-            <h3>TGA Games</h3>
+            <h2>The Game Assembly Games</h2>
             <div class="GamesGrid">
+
+                <div class="GameCard">
+                    <img src="../Resources/Images/Heronin.png" style="margin-left: 0px;" alt="Little Sinner">
+                    <p>Heronin<br>2025</p>
+                </div>
+
+                <div class="GameCard">
+                    <img src="../Resources/Images/" style="margin-left: 50px;" alt="Little Sinner">
+                    <p>Atlantean Ascent<br>2025</p>
+                </div>
+
+                <div class="GameCard">
+                    <img src="../Resources/Images/" style="margin-left: 50px;" alt="Little Sinner">
+                    <p>Spite The Summoning<br>2025</p>
+                </div>
+
+                <div class="GameCard">
+                    <img src="../Resources/Images/Deliverance.png" style="margin-left: 50px;" alt="Little Sinner">
+                    <p>Deliverance<br>2024</p>
+                </div>
 
                 <div class="GameCard">
                     <img src="../Resources/Images/Little Sinner Banner.png" style="margin-left: 50px;" alt="Little Sinner">
@@ -75,6 +95,26 @@
                     <p>Space Trip<br>2023</p>
                 </div>
 
+
+            </div>
+
+            <h2>Ljud Och Bildskolan Games</h2>
+            <div class="GamesGrid">
+
+                <div class="GameCard">
+                    <img src="../Resources/Images/Fay.png" style="margin-left: 10px; scale: 1.5;" alt="Little Sinner">
+                    <p>Fay<br>2022</p>
+                </div>
+
+                <div class="GameCard">
+                    <img src="../Resources/Images/Little Sinner Banner.png" style="margin-left: 50px;" alt="Little Sinner">
+                    <p>Rowers 2<br>2021</p>
+                </div>
+
+                <div class="GameCard">
+                    <img src="../Resources/Images/Little Sinner Banner.png" style="margin-left: 50px;" alt="Little Sinner">
+                    <p>Rowers<br>2019</p>
+                </div>
 
             </div>
         
