Added Images for Atlantean Ascent and Spite The Summoning

--- a/Games/index.html
+++ b/Games/index.html
@@ -55,22 +55,22 @@
             <div class="GamesGrid">
 
                 <div class="GameCard">
-                    <img src="../Resources/Images/Heronin.png" style="margin-left: 0px;" alt="Little Sinner">
+                    <img src="../Resources/Images/Heronin.png" style="margin-left: 0px;" alt="Heronin">
                     <p>Heronin<br>2025</p>
                 </div>
 
                 <div class="GameCard">
-                    <img src="../Resources/Images/" style="margin-left: 50px;" alt="Little Sinner">
+                    <img src="../Resources/Images/Atlantean Ascent.png" style="margin-left: 50px;" alt="Atlantean Ascent">
                     <p>Atlantean Ascent<br>2025</p>
                 </div>
 
                 <div class="GameCard">
-                    <img src="../Resources/Images/" style="margin-left: 50px;" alt="Little Sinner">
-                    <p>Spite The Summoning<br>2025</p>
+                    <img src="../Resources/Images/Spite The Summoning.png" style="margin-left: 0px; scale: 1.45;" alt="Spite: The Summoning">
+                    <p>Spite: The Summoning<br>2025</p>
                 </div>
 
                 <div class="GameCard">
-                    <img src="../Resources/Images/Deliverance.png" style="margin-left: 50px;" alt="Little Sinner">
+                    <img src="../Resources/Images/Deliverance.png" style="margin-left: 0px;" alt="Deliverance">
                     <p>Deliverance<br>2024</p>
                 </div>
 
