--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         
         <div class="main-content">
 
-            <h3>Under Construction...</h3>
+            <h3>Under Construction</h3>
+            <p>Hello! This website is still under construction, I'm switching from using Squarespace to rewriting my website from scratch</p>
         
         <script>
                 fetch('footer.html')
